Sun Jun 11 14:39:28 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc (generateStars): Fix problem when maxScore
	== minScore as reported by Rajendra. Fixed problem PR#858.
	(displayMatch): Ditto.

	* htsearch/htsearch.cc: Fix memory corruption problem in reporting
	syntax errors pointed out by Rajendra. Fixes PR#860.

Thu Jun  8 09:31:15 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Accents.h, htfuzzy/Accents.cc: Apply Robert Marchand's
	  patch to his algorithm.  Gets rid of writeDB function (falls back
	  on default one in Fuzzy.cc), changes addWord, and adds a new
	  getWords function to override default.  These avoid overhead of
	  unaccented forms of words in accents database, but ensure that
	  unaccented form of search word is always searched.

Thu Jun  8 09:00:02 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.h(DocScore, docScore),
	  htsearch/ResultMatch.cc(ScoreMatch::compare),
	  htsearch/ResultMatch.h(setScore, getScore, score),
	  htsearch/Display.cc(displayMatch, generateStars, buildMatchList):
	  Apply Terry Luedtke's patch for score calculations, to calculate
	  min & max from log(score).

Thu Jun  8 08:47:03 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/doc2html/doc2html.pl: Apply David Adams' fix for missing
	  quote.

Wed Jun 07 10:53:53 2000  Loic Dachary  <loic@senga.org>

	* db/db.c (CDB___db_dbenv_setup): open mode is 0666 instead
	  of 0 otherwise the weakcmpr file is not open with the proper
	  mode.

Tue Jun  6 23:48:48 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* httools/htpurge.cc: Fix coredump problems by passing
	dictionaries as pointers rather than full objects (this is
	preferred anyway).

Sun Jun  4 22:17:14 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* test/t_htdig_local: Added test for local filesystem support.

	* test/config/htdig.conf2.in: Change to be a config file for
	local_urls testing.
